--- a/README.rdoc
+++ b/README.rdoc
@@ -34,9 +34,12 @@ If the User model has a method named nested_comments_display_name, the value of 
 The gem assumes that there exists an Applicationcontroller and that you can call current_user on that model.
 Assumes the user model is named User
 Anonymous comments are not allowed.
+
+For fallback non javascript usage
 Assumes the existance of a show action for each model that has_nested_comments
-No authorization check right now, that means anyony can post a comment on any model
-Only browser validations of extra comments
+
+No authorization check right now, that means anyone can post a comment on any model
+Only browser validations of comments having content
 
 == Bugs
 ancestry needs to be in the mother file
